01-build-cluster/config/otel/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: otel.kubernetes
      http:
        paths:
          - path: /v1/traces
            pathType: Prefix
            backend:
              service:
                name: otel-collector
                port:
                  number: 4318
          - path: /v1/metrics
            pathType: Prefix
            backend:
              service:
                name: otel-collector
                port:
                  number: 4318
          - path: /v1/logs
            pathType: Prefix
            backend:
              service:
                name: otel-collector
                port:
                  number: 4318
